--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     box-sizing: border-box;
 }
 header{
-    justify-items: center;
+    justify-self: center;
     margin-top: 30px;
 }
 footer{
@@ -29,11 +29,13 @@ body{
     background-position: right top, left bottom, center, center;
 }
 
-.welcome > h1{
+h1{
+    font-family: var(--fuente);  
     font-weight: 800;
     font-size: 3.125rem;
-    text-align: center;
-    
+    text-align: center; 
+    color: #fff;
+    background: linear-gradient(90deg hsl(7, 86%, 67%), hsl(0, 0%, 100%));
 }
 .welcome > p {
     font-size: 20px;
@@ -42,8 +44,11 @@ body{
 section{
     display: flex;
     justify-content: center;
-    color: aliceblue;
-    font-family: var(--fuente);     
+    flex-direction: column;
+    align-items: center;
+    font-family: var(--fuente);
+    color: #fff;
+    gap: 10px;   
 }
 
 legend{
@@ -56,12 +61,7 @@ legend{
 
 .welcome{
     text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    margin: 60px;
-    margin-top: 30px; 
+    margin: 30px 60px 60px 60px;
 }
 
 .formulario {
@@ -110,7 +110,8 @@ fieldset {
     background-color: rgba(122, 122, 122, 0.35);
 }
 
-div{
+.input_file{
+    max-width: 100%;
     width: 25rem;
     height: 7.5rem;
     background-color: rgba(0, 0, 0, 0.1);
@@ -120,12 +121,12 @@ div{
     align-content: center;
 }
 
-div:hover{
+.input_file:hover{
     background-color: rgba(122, 122, 122, 0.35);
     cursor: pointer;
 }
 
-#imagen{
+.imagen{
     width: 50px;
     border-radius: 12px;
     border:1px solid hsla(240, 1%, 70%, 0.491);
@@ -176,7 +177,7 @@ button:hover{
         margin: 30px;
         margin-top: 20px;
     }
-    .welcome > h1{
+    h1{
         font-size: 1.6rem;
 
     }
@@ -193,7 +194,7 @@ button:hover{
         height: 2.813rem;
     }
 
-    div{
+    .input_file{
         width: 20.313rem;
         height: 7.5rem,;
         background-color: rgba(0, 0, 0, 0.1);
@@ -207,12 +208,33 @@ button:hover{
         width: 20.313rem;
         height: 2.813rem;
         border-radius: 10px;
-        background-color: hsl(7, 88%, 67%);
-        font-family: var(--fuente);
-        font-weight: 800;
-        font-size: large;
-        transition: 0.5s;
+    }
+
+    body{
+        background-repeat: no-repeat;
+        background-size: 40%, 50%, cover, cover;
+        background-position: right top, left bottom, center, center;
     }
 
 }
+
+.form-error {
+    display: none;
+}
+
+.ticket_congrats{
+    margin: 30px 60px 60px 60px;
+}
+.ticket_congrats > p {
+    font-size: 1.2rem;
+    text-align: center;    
+}
+
+
+#ticket_name {
+    background: linear-gradient(90deg, hsl(7, 86%, 67%), hsl(0, 0%, 100%));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;   
+ }
+
 
